05/10 - First full draft!

--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -1,4 +1,5 @@
-\titlepage[Department of Physics]{A thesis submitted to Imperial
+\titlepage[Department of Physics\\
+Centre for Cold Matter]{A thesis submitted to Imperial
   College London for partial
 fulfillment of the requirements for the degree of Doctor of Philosophy }
 \begin{abstract}
@@ -51,9 +52,9 @@ work.
     There are many people to whom I owe a great deal of thanks. 
 \end{acknowledgements}
 
-\begin{preface}
-    This thesis describes my research on various aspects of\ldots
-\end{preface}
+%\begin{preface}
+%    This thesis describes my research on various aspects of\ldots
+%\end{preface}
 
 %\begin{frontmatter}
     %   \dedication{For the World}
