--- a/introduction.tex
+++ b/introduction.tex
@@ -194,6 +194,17 @@ horizontal accelerations. Gravitational acceleration induces motion
 transverse to the laser wavefront. Together with the requirements of
 high acceleration sensitivity and minimal dead-time, this influenced the technical
 aspects of this experiment.  
+\section{Note on Units}
+
+In subsequent chapters of this thesis, various non-SI units are used
+for convenience. The commonly used ones are defined here:
+\begin{itemize}
+  \item \sivalue{1}{\gauss} \(= \sivalue{1e-4}{\tesla}\)
+    \item g = \sivalue{9.80665}{\metre\per\second\squared} (as defined
+      in~\cite{accelStandard})
+    \item $I_\textnormal{sat}$ = \sivalue{1.38}{\mW\per\cm\tothe{2}}
+    \item \Gamma = $2\pi \times$ \sivalue{6.065}{\MHz} 
+  \end{itemize}
 \section{Structure of this Thesis}
 This thesis is structured as follows:
 \begin{itemize}
