17/10 - First corrections from Ed

--- a/introduction.tex
+++ b/introduction.tex
@@ -199,11 +199,16 @@ aspects of this experiment.
 In subsequent chapters of this thesis, various non-SI units are used
 for convenience. The commonly used ones are defined here:
 \begin{itemize}
-  \item \sivalue{1}{\gauss} \(= \sivalue{1e-4}{\tesla}\)
-    \item g = \sivalue{9.80665}{\metre\per\second\squared} (as defined
-      in~\cite{accelStandard})
+  \item \sivalue{1}{\gauss} \(= \sivalue{1e-4}{\tesla}\) (Gauss - cgs
+    unit of magnetic flux density)
+    \item g = \sivalue{9.80665}{\metre\per\second\squared}
+      (international standard of gravitational acceleration, measured
+      at $45^\circ$ latitude and sea level~\cite{accelStandard})
     \item $I_\textnormal{sat}$ = \sivalue{1.38}{\mW\per\cm\tothe{2}}
-    \item \Gamma = $2\pi \times$ \sivalue{6.065}{\MHz} 
+      (saturation intensity for the \trans{2,2}{3,3} cycling transition in
+      Rubidium-87)
+    \item $\Gamma$ = $2\pi \times$ \sivalue{6.065}{\MHz} (natural
+      linewidth of the above transition)
   \end{itemize}
 \section{Structure of this Thesis}
 This thesis is structured as follows:
@@ -216,13 +221,13 @@ This thesis is structured as follows:
   \item \textbf{Chapter 4} outlines the preliminary cooling and
     trapping of Rubidium-87 in a \ac{mot}.
   \item \textbf{Chapter 5} discusses the techniques used to further
-    cool the atoms and prepare an ensemble in the same internal state,
+    cool the atoms and prepare an ensemble in a suitable single internal state,
   \item \textbf{Chapter 6} gives a detailed description of the
     in-vacuum optical system for driving Raman transitions.
   \item \textbf{Chapter 7} characterises the interferometer's
     sensitivity to accelerations.
   \item \textbf{Chapter 8} summarises the conclusions of this thesis and outlines
-    further work towards improving the experiment
+    further work towards improving the accelerometer.
 \end{itemize}
 %A theoretical introduction to
 %matter-wave interferometry and the relevant atomic structure of
