--- a/theory.tex
+++ b/theory.tex
@@ -8,14 +8,14 @@ in~\SectionRef{sec:theory_atomint}. This is followed by a derivation of
 the equations of motion for a Raman transition in a simplified
 three-level atom
 in~\SectionRef{sec:theory_raman}. Finally, this chapter concludes with
-a discussion of the atomic structure of \ac{rb87}, focusing on the
+a discussion of the atomic structure of \ac{rb87}, focussing on the
 aspects relevant to the previously mentioned phenomena.
 \par\noindent
 This chapter assumes some prior understanding of light-matter
 interactions on the part of the reader. A comprehensive description of
 the semi-classical approximation to atom-light interactions can be
-found in~\cite{Grynberg2011}. Theories on laser cooling and magneto-optical
-trapping are of interest to some experimental aspects of these thesis.
+found in~\cite{Grynberg2011}. Theories of laser cooling and magneto-optical
+trapping are of interest for some experimental aspects of these thesis.
 Details of these can be found in~\cite{Metcalf2003}. For an exact derivation of
 the two-level approximation to the Raman transition, the reader is referred
 to~\cite{Wu1996}.  
@@ -28,10 +28,10 @@ each other if their wavefunctions overlap. The interference pattern,
 which depends on the difference in phase between the two paths.
 \par\noindent
 In this section, the theory of matter-wave interference using pulses
-of laser light is presented. It begins with a description of the
+of laser light is presented. It begins in~\SectionRef{subsec:theory_mz} with a description of the
 $\pi/2-\pi-\pi/2$ pulse sequence that forms an analogue of the
-Mach-Zehnder interferometer in~\SectionRef{subsec:theory_mz}. This is
-followed by a derivation of the interferometer phase in~\SectionRef{subsec:theory_path}. In
+Mach-Zehnder interferometer. This is
+followed in~\SectionRef{subsec:theory_path} by a derivation of the interferometer phase. In
 particular, it is shown that this depends upon the
 acceleration of the atom during the interferometer. 
 
@@ -110,7 +110,7 @@ the propagation phase is proportional to the action along the
 classical path
 \begin{equation}
   \label{eq:prop_phase}
-  \Delta \Phi_\textnormal{prop} = \frac{i}{\hbar} S_\textnormal{cl}(t_b,x_b,t_a,x_a)
+  \Phi_\textnormal{prop} = \frac{1}{\hbar} S_\textnormal{cl}(t_b,x_b,t_a,x_a)
 \end{equation}
 \par\noindent
 This is indeed the case for an atom interferometer. When considering a
@@ -135,7 +135,7 @@ Using~\EquationRef{eq:action_def}, the action is given by
   S(t_b,x_b,t_a,x_a) = \frac{m(x_b-x_a)^2}{2(t_b-t_a)} + \frac{m a
   (x_b+x_a)(t_b-t_a)}{2} -\frac{m a^2 (t_b-t_a)^3}{24} 
 \end{equation}
-The trajectories along each interferometer path under acceleration is
+The trajectories along each interferometer path under acceleration are
 shown in~\FigureRef{fig:interferometer_accel}. Denoting
 $S_\textnormal{ac} \equiv S(T,x_c,0,x_a)$ and likewise for the other
 co-ordinates, the difference in the action along the upper and lower paths is 
@@ -144,14 +144,19 @@ co-ordinates, the difference in the action along the upper and lower paths is
 \left(S_\textnormal{ab}+S_\textnormal{bd}\right) &= -\frac{\text{m}
 (x_b-x_c) \left(a T^2- x_a+x_b+x_c-x_d\right)}{T}\nonumber \\
 &= -\frac{\text{m}
-(x'_b-x'_c) \left((x'_c-x'_a) + (x'_d+-x'_b)\right)}{T}
+(x'_b-x'_c) \left((x'_c-x'_a) - (x'_d+x'_b)\right)}{T}
 \label{eq:prop_action}
 \end{align}
-where the second expression is obtained using $x_b - x_b' = x_c - x_c'
-= \frac{1}{2}a T^2$ and $x_d-x_d' = 2 a T^2$. When there is zero
-acceleration, the area enclosed by the interferometer forms a
-parallelogram and the action along each path is equal. It follows
-from~\EquationRef{eq:prop_phase} that $\Delta \Phi_\textnormal{prop} =
+The second expression is obtained using $x_b - x_b' = x_c - x_c'
+= \frac{1}{2}a T^2$ and $x_d-x_d' = 2 a T^2$, where the primes
+indicate positions in the absence of acceleration. The last factor on
+the numerator of~\EquationRef{eq:prop_action} is zero because the
+paths enclose a parallelogram for which $x_c' - x_a' = x_d'-x)b'$. It follows
+from~\EquationRef{eq:prop_phase} that there is no difference in the
+propagation phase along the two paths $acd
+(\Phi_\textnormal{prop}^{u})$ and $acd (\Phi_\textnormal{prop}^{l})$. In other words,
+$\Delta\Phi_\textnormal{prop} = \Phi_\textnormal{prop}^{u}-
+\Phi_\textnormal{prop}^{l}=
 0$ when there is a constant acceleration of the atom.
 \begin{figure}[htpb]
   \centering
@@ -162,13 +167,13 @@ from~\EquationRef{eq:prop_phase} that $\Delta \Phi_\textnormal{prop} =
 \label{fig:interferometer_accel}
 \end{figure}
 \subsubsection{Internal State Evolution}
-Between each laser pulse, the atom evolves freely. Therefore, the
+Between each laser pulse, the internal state of the atom evolves freely. Therefore, the
 phase due to this evolution is given by
 \begin{equation}
   \label{eq:internal_evolution}
-  \phi^{(j)}(t_a,t_b) = \int_{t_a}^{t_b} i \omega_j t\;\mathrm{d} t
+  \phi^{(j)}(t_a,t_b) = \int_{t_a}^{t_b} \omega_j t\;\mathrm{d} t
 \end{equation}
-where $\omega_j$ depends on the state of the atom along that
+where $\hbar \omega_j$ is the internal energy of the atom along that
 trajectory. The phase difference due to the internal state evolution
 is 
 \begin{equation}
@@ -177,7 +182,8 @@ is
   \phi^{(1)}(t_2,t_3) - \left(\phi^{(1)}(t_1,t_2) + \phi^{(2)}(t_2,t_3)\right)
 \end{equation}
 which is zero if the time between successive pulses is the same and
-the energy of each state does not vary. The latter case is important
+the energy of each state does not vary. The possibility of energy
+variation is important
 when considering the effects of the ac Stark shift and is addressed
 subsequently in~\SectionRef{subsec:light_shift}.
 
@@ -187,35 +193,53 @@ transition, the phase of the laser modifies the state of the atom. The
 propagator that describes this transition for arbitrary Rabi
 frequencies and detuning is derived below,
 in~\SectionRef{sec:theory_raman}. For now, it is sufficient to focus
-on the ideal case of perfect pulse areas and zero detuning. The laser
-interaction modifies the two states as follows
+on the ideal case of perfect pulse areas and zero detuning. The first
+and third pulses have pulse areas of $\pi/2$, which modifies the two
+states as follows
 \begin{subequations}
   \begin{align}
-    U_\text{L}(\phi) \ket{1} &= e^{-i \phi} \ket{2} \\
-    U_\text{L}(\phi) \ket{2} &= e^{i \phi} \ket{1} 
+    U_{\pi/2}(\phi) \ket{1} &= \frac{1}{\sqrt{2}}\ket{1}+ 
+    \frac{e^{-i \phi}}{\sqrt{2}} \ket{2} \\
+    U_{\pi/2}(\phi) \ket{2} &=  \frac{e^{i \phi}}{\sqrt{2}} \ket{1}
+    + \frac{1}{\sqrt{2}} \ket{2}
   \end{align}
 \end{subequations}
-where $\phi = \textbf{k.x} - \omega_\text{L}t + \phi_j$ is the phase
-of the light driving the transition. If the time between each pulse is
-constant the $\omega_\text{L} t$ term can be omitted, so that the
-phase of the atom along each path depends on its position and the
-phase of the laser. If the acceleration is along the same axis as the
-light's wavevector ($\textbf{k.x} \equiv k x$), the phase along the upper and lower paths are 
+where $\phi = \textbf{k.x} - \omega_\text{L}t + \phi_0$ is the phase
+of the light driving the transition in the atom at position
+$\textbf{x}$. The middle pulse has a $\pi$ pulse area whose interaction is
+described by
 \begin{subequations}
   \begin{align}
-    \phi_l &= i(k x_b + \phi_2) \\
-    \phi_u &= i(k (x_a - x_c + x_d) + \phi_1 - \phi_2 + \phi_3)
+    U_\pi(\phi) \ket{1} &= e^{-i \phi} \ket{2} \\
+    U_\pi(\phi) \ket{2} &= e^{i \phi} \ket{1} 
   \end{align}
 \end{subequations}
-Following the same argument used in~\EquationRef{eq:prop_action}, this
+The phases along the upper and lower path are then 
+\begin{subequations}
+  \begin{align}
+    \phi_l &= k (x_d-x_b) - \omega_\text{L} T + \phi_{0}^{(3)} -\phi_{0}^{(2)}  \\
+    \phi_u &= k (x_c-x_a) - \omega_\text{L} T + \phi_{0}^{(2)} -\phi_{0}^{(1)}  \\
+  \end{align}
+\end{subequations}
+where $\phi_{0}^{(j)}$ refers to the phase of the laser at the $j-$th
+light pulse. Following the same argument used in~\EquationRef{eq:prop_action}, this
 can be simplified so that the phase difference due to the laser interaction ($\phi_u -
 \phi_l$), and hence the total phase difference, is
 \begin{equation}
   \label{eq:phase_interferometer}
-  \Delta_\Phi = \Delta \Phi_\textnormal{laser} = \textbf{k.a} T^2 + \phi_1 - 2\phi_2
-  + \phi_3
+  \Delta \Phi_\textnormal{laser} = \textbf{k.a} T^2 - \phi_0^{(1)} + 2
+  \phi_0^{(2)}
+  - \phi_{0}^{(3)}
 \end{equation}
-
+In summary, the phase difference along the two paths of the
+interferometer comes not from the atomic motion along the path, nor
+from the phase evolution of the internal states, but rather the
+position-dependent phase of the light field, which is impressed on the
+atom each time a transition is driven. This makes a phase difference
+of $\textbf{k.a} T^2$. In addition, if the phase of the light is
+adjusted between pulses, there is a further interferometer phase of
+$- \phi_0^{(1)} + 2\phi_0^{(2)} - \phi_0^{(3)}$. This second part
+vanishes if the phase of the light is undisturbed between pulses.
 \section{Raman Transitions in Rubidium-87}\label{sec:theory_raman}
 In this section, an analysis of the dynamics of the stimulated Raman transition is
 presented. This is modeled as an effective transition between two
@@ -244,24 +268,26 @@ frequency\begin{equation}
   \Omega_j = \frac{1}{\hbar}\bra{j} -\textbf{d}.\textbf{E}_{0,j}
   \ket{i} e^{i \phi_j}
 \end{equation}
-where $\textbf{d}$ is the dipole operator. The frequency of each field is detuned from resonance to
-give a two-photon detuning $\Delta$. It is assumed that the
-hyperfine splitting $\omega_\text{hfs}$ is much larger than this, so
-that each field only drives transitions from one of the ground states. 
+where $\textbf{d}$ is the dipole operator. Referring
+to~\FigureRef{fig:raman_model}, it is assumed that $\omega_\text{hfs} \gg \Delta \gg \delta$, so
+that $\textbf{E}_1$ couples only to state $\ket{1}$ and $\textbf{E}_2$
+couples only to state $\ket{2}$. 
 %The total electric field is described by the superposition $\textbf{E}_1 + \textbf{E}_2$. 
-When $\Delta$ is sufficiently larger than the natural transition
-linewidth, the population of the intermediate state remains constant
-and can be adiabatically eliminated. The
+When $\Delta$ is sufficiently large, the frequency of the two fields
+are far off-resonant from their corresponding transition frequencies
+that couple \trans{j}{i}. In this case, the population of the
+intermediate state remains small. This state can be adiabatically
+eliminated to result in an effective two-level system. The
 interference of the two fields means that the transition can be
 represented by an interaction with an effective field with the
 following parameters
 \begin{subequations}
   \begin{align}
-    \omega_\textnormal{eff} &= \omega^l_1 - \omega^2_l \\
+    \omega_\textnormal{eff} &= \omega^l_1 - \omega^l_2 \\
     \phi_\textnormal{eff} &= \phi_1 -\phi_2 \\
     \keff &= \textbf{k}_1 - \textbf{k}_2 \\
           &\approx 2\textbf{k}_1\;
-    \text{(when counter-propagating)} \nonumber 
+    \text{(because the beams will be counter-propagating)} \nonumber 
   \end{align}
 \end{subequations}
 The resonance condition for the Raman transition is given by 
@@ -270,17 +296,17 @@ The resonance condition for the Raman transition is given by
 \textbf{v} + \frac{\hbar |\keff|^2}{2m}\right]
   \label{eq:raman_detuning}
 \end{equation}
+Here, the second term in the square brackets is the Doppler shift and
+the third is the recoil shift.
 \begin{figure}[htpb]
   \centering
   \fontsize{16pt}{16pt}
   \resizebox{0.4\textwidth}{!}{\input{raman_model.pdf_tex}}
   \caption[Schematic diagram of a raman transition.]{Schematic diagram of a raman transition. Two states,
-  $\ket{1}$ and $\ket{2}$, are coupled to each other via transitions
-  to an
-intermediate state $\ket{i}$. When the frequencies of the light
-fields are
-far-detuned from resonance,
-then $\ket{i}$ can be adiabatically eliminated, resulting in an
+  $\ket{1}$ and $\ket{2}$, are coupled to each other via
+  an
+  intermediate state $\ket{i}$. When $\Delta$ is large enough (see
+  text) $\ket{i}$ can be adiabatically eliminated, resulting in an
 effective two-level system.}
   \label{fig:raman_model}
 \end{figure}
@@ -319,6 +345,8 @@ effective Rabi frequency $\Omega_\textnormal{eff}$ are given by
     |\Omega_2|}{2 \Delta }\label{eq:raman_rabi} 
 \end{align}
 \end{subequations}
+where the contribution of $\delta$ to the one-photon detuning of the
+\trans{2}{i} transition has been neglected compared with $\Delta$.
 Under an appropriate choice of intensities and two-photon detuning, it
 is possible to cancel the differential ac Stark shift
 $\Omega_1^\textnormal{ac} -\Omega_2^\textnormal{ac}$ (see
@@ -347,7 +375,7 @@ t}{2}\right)& \cos \left(\frac{ \Omega' t}{2}\right)+i\frac{
 \label{eq:propagator_first}
 \end{equation}
 and $\Omega' = \sqrt{\delta^2 + \Omega_\textnormal{eff}^2}$ is the
-generalised Rabi frequency. After transforming back into the
+generalised Rabi frequency~\cite{Ramsey1950}. After transforming back into the
 stationary frame, \EquationRef{eq:propagator_first} becomes
 \begin{equation}
 U =  \begin{pmatrix} 
@@ -385,7 +413,7 @@ is given by
 \begin{equation}
   \label{eq:general_state}
   \ket{\psi} = U(\Omega_3,\phi_3,\delta_3,\tau_3) F(T_2)
-  U(\Omega_2,\phi_2,\delta_3,\tau_2) F(T_1)
+  U(\Omega_2,\phi_2,\delta_2,\tau_2) F(T_1)
   U(\Omega_1,\phi_1,\delta_1,\tau_1)
   \ket{\psi_0}
 \end{equation}
@@ -412,12 +440,10 @@ detuning with the initial state $\ket{\psi_0} =
   \label{eq:state_simp}
   P'_{\ket{2}} &= \sin \left(\frac{1}{2} (\phi_1-2
   \phi_2+\phi_3)\right)^2 \nonumber \\
-  &= \sin\left(\frac{\Delta \Phi}{2}\right)
+  &= \sin\left(\frac{\Delta \Phi}{2}\right)^2,
 \end{align}
-Where $\Delta \Phi$, defined
-in~\EquationRef{eq:phase_interferometer}, is recovered by substituting 
-$\phi_j \rightarrow \phi_j^{(l)} + \textbf{k.x}$ and using the
-position of the centre-of-mass at each pulse for $\textbf{x}$.
+where $\Delta \Phi$ is related to the acceleration of the atom
+in~\EquationRef{eq:phase_interferometer}.
 %In order to observe interference between two atomic states, it is
 %essential that they remain coherent over the required timescale. The
 %most suitable choice of states for this are the $\ket{F=1,m_F=0}$ and
@@ -446,12 +472,15 @@ by the following sum
 \end{equation}
 where the index $k$ labels the intermediate states which couple to
 both $\ket{1}$ and $\ket{2}$. A similar expression can be obtained for
-the ac Stark shift terms. The effective Rabi frequency in \EquationRef{eq:rabi_raman_sum} implicitly
+the ac Stark shift terms. Note that the previous assumption that
+$\textbf{E}_1$ only couples to the state $\ket{1}$, and similarly for
+$\textbf{E}_2$, is no longer valid. A full treatment includes the
+coupling of each field to each state. The effective Rabi frequency in \EquationRef{eq:rabi_raman_sum} implicitly
 depends on the polarisation of the light. The individual Rabi
 frequencies $\Omega_{jk}$ are calculated using the Clebsch-Gordan
 coefficients that describe the coupling of angular momentum states.
 Further detail on calculating transition matrix elements of tensor
-operators can be found in~\cite{Brink1968}. 
+operators can be found in~\cite{Brink1968}.  
 %\par\noindent
 %A Raman transition is a two-photon process whereby the state of an
 %atom evolves by interacting with two laser fields. This can occur in
@@ -535,42 +564,41 @@ operators can be found in~\cite{Brink1968}.
 \section{Applications to Rubidium-87}
 This final section places what has been discussed thus far into the
 context of Rubidium-87, the atomic species used in this experiment. It
-begins with a presentation of the atomic structure of the D2
-transition in~\SectionRef{subsec:theory_atomic}. Transitions between
-different hyperfine levels are used throughout this experiment. Most
-importantly, these are used for cooling and trapping, as well as driving
-Raman transitions. This is followed by an overview of the
+begins in~\SectionRef{subsec:theory_atomic} with a presentation of the hyperfine structure in the
+$5S_{1/2}$ and $5P_{3/2}$ levels, used throughout this experiment for
+cooling and trapping, as well as interferometry. This is followed by an overview of the
 techniques used to drive counter-propagating Raman transitions
 in~\SectionRef{subsec:theory_rb87_raman}. In
 particular, this motivates the choice of polarisation used for the two
-Raman beams. Finally, this section concludes with a discussion of the
-two interferometer paths in~\SectionRef{sec:theory_double_int}.
+Raman beams. Finally, this section concludes in~\SectionRef{sec:theory_double_int} with a discussion of the two interferometer paths. 
 \subsection{Atomic Structure}\label{subsec:theory_atomic}
-Rubidium-87 has a hyperfine structure that is well-suited for a wide
-range of experiments. For instance, the energy splitting in the
-$5P^{3/2}$ level is large enough that it can be efficiently laser
-cooled using one laser to cool and another to prevent dark state
-population build-up. 
+The $5S_{1/2}$ electronic ground state of Rubidium-87 has two
+hyperfine levels $F=1$ and $F=2$, split by \sivalue{6.8}{\GHz}. 
+It can be efficiently laser
+cooled using one laser (the cooler) to scatter light from atoms in
+$F=2$, and another (the repumper) to pump atoms out of $F=1$ and into
+$F=2$.
 \par\noindent
-In addition to this, the existence of two hyperfine
-levels in its ground state presents suitable choices of states for
-interferometry. Neither the $\ket{F=1}$ nor $\ket{F=2}$ levels will
-spontaneously decay, which helps to preserve their coherence during
-the interferometer. Particular pairs of Zeeman sub-levels can be
+In addition to these, two hyperfine
+levels in its ground state provide suitable choices of states for
+interferometry. Neither decays 
+spontaneously, which helps to preserve their coherence during
+interferometry. Particular pairs of Zeeman sub-levels can be
 identified which are coupled via a Raman transition. When the two
-laser fields are counter-propagating, this imparts much more momentum
-than the equivalent microwave transition. This is desirable for
+laser fields are counter-propagating, the photon recoil imparts $10^5$
+times more momentum
+than the one-photon \sivalue{6.8}{\GHz} microwave transition. This is desirable for
 acceleration sensing, since the sensitivity is directly proportional to
 the recoil momentum. 
 \par\noindent
-The D2 transition between the $5S^{1/2}$ ground state and $5P^{3/2}$
+The D2 transition between the $5S_{1/2}$ ground state and $5P_{3/2}$
 excited state is
 shown in~\FigureRef{fig:rb87_hyperfine}. The key transitions used in
-this experiment are also indicated. The Zeeman sub-levels (which range
-from $-F,-F+1,\ldots,F$) are not
-shown explicitly but can be inferred from the Land\'e $g$-factor.
-The energy difference of two Zeeman sub-levels is
-$E_m - E_m' = g_F B (m - m')$. The values listed are taken
+this experiment are also indicated. The Zeeman sub-levels (with
+magnetic quantum numbers $m_F$ ranging from $-F$ to $F$) are not
+shown explicitly. Their energies are shifted in a magnetic field
+$B$ by an amount $g_F m_F B$, where $g_F$ is the Land\'e $g$-factor.
+The values listed are taken
 from~\cite{Steck2001}. Further quantities, such as relative transition
 strengths and physical properties of Rubidium-87 are contained
 therein. 
@@ -590,7 +618,7 @@ from \cite{Steck2001}.}
 \subsection{Driving Raman Transitions}\label{subsec:theory_rb87_raman}
 Within the Rubidium-87 ground state, there are multiple pairs of
 states that can be coherently coupled using a Raman transition.
-A natural choice is the $m_F = 0$ sub-levels\footnote{In what follows,
+A natural choice is for interferometry is to use the two $m_F = 0$ sub-levels\footnote{In what follows,
   the states $\ket{1}$ and $\ket{2}$ will be used as alternative
   notation for $\ket{F=1,m_F=0}$ and $\ket{F=2,m_F=0}$ in instances
   where the
@@ -605,25 +633,26 @@ crucial to ensuring that the $\Delta m_F = 0$ transition is driven.
 The $\ket{1,0} \rightarrow \ket{2,0}$ transition does not change the
 magnetic quantum number, i.e. the projection of angular momentum
 along the given quantisation axis. However, the total angular momentum quantum number
-increases by 1, which means that the Raman transition is described by a vector
-operator proportional to the product of two dipole operators. This can
-occur when the two electric
-field are orthogonally linearly polarised (lin $\perp$ lin) to each
+increases by 1, which means that the Raman transition can be driven
+when the two electric
+fields are orthogonally linearly polarised (lin $\perp$ lin) to each
 other and to the quantisation axis. \par\noindent
 For circular polarisation, it can be shown that the two fields must
 have the same handedness. The electric field of a right-handed
-circularly polarised beam is $\textbf{E} = E_+ e^{-i \omega t} + E_-
-e^{i \omega t}$, so the product $\textbf{d.E}$
+circularly polarised beam is $\textbf{E} = E_- e^{-i \omega t} + E_+
+e^{i \omega t}$, where $E_-$ is the annihilation operator and $E_+$ is
+the creation operator. The product $r \equiv \textbf{d.E}$
 can be written as
 \begin{equation}
   \label{eq:dipole_expansion}
   r_j =  
-(d^{(j)}_+ E^{(j)}_+ e^{-i \omega_j t} + d^{(j)}_- E^{(j)}_- e^{i
+(d^{(j)}_+ E^{(j)}_- e^{-i \omega_j t} + d^{(j)}_- E^{(j)}_+ e^{i
 \omega_j t})
 \end{equation}
 where $d^{(j)}_+$ and $d^{(j)}_-$ are the components of the dipole operator which
 increase and decrease $m_F$, respectively. The index $j$ labels
-the $\ket{j,0}$ state. The product $r_1 \times r_2$ is expanded to
+the $\ket{j,0}$ state. The product $r_1 r_2$ is expanded in the
+rotating wave approximation to
 give
 \begin{equation}
   \label{eq:dipole_exp}
@@ -631,8 +660,8 @@ give
 %\omega_1 t})
 %(d^{(2)}_+ E^{(2)}_+ e^{-i \omega_2 t} + d^{(2)}_- E^{(2)}_- e^{i
 %\omega_1 t})\nonumber \\
-r_1 \times r_2= (d^{(1)}_+ E^{(1)}_+ d^{(2)}_- E^{(2)}_- e^{-i (\omega_1 - \omega_2)
-  t} + d^{(1)}_- E^{(1)}_- d^{(2)}_+ E^{(2)}_+  e^{i(
+r_1 r_2= (d^{(1)}_+ E^{(1)}_- d^{(2)}_- E^{(2)}_+ e^{-i (\omega_1 - \omega_2)
+  t} + d^{(1)}_- E^{(1)}_+ d^{(2)}_+ E^{(2)}_-  e^{i(
 \omega_1 -\omega_2)t})
 \end{equation}
 where the first term corresponds to the component which drives
@@ -641,9 +670,9 @@ $\ket{1,0} \rightarrow \ket{2,0}$ and the second to $\ket{2,0}
 The terms proportional
 to $(\omega_1 + \omega_2)$ have been neglected as they are
 off-resonant. A similar argument follows in the case of two left-handed
-circular polarised fields $\textbf{E} = E_+ e^{-i \omega t} - E_-
-e^{i \omega t}$. Conversely, a pair of left- and right-handed beams
-will not drive transitions. The product of the dipole operators
+circular polarised fields $\textbf{E} = E_- e^{-i \omega t} - E_+
+e^{i \omega t}$. Conversely, the transition is not driven if one beam
+is left-handed and the other is right-handed, since the near-resonant product of dipole operators
 results in components of the form $d^{(1)}_+ d^{(2)}_+$, which
 change the magnetic quantum number by $\pm2$.
 \subsection{The Double Interferometer}\label{sec:theory_double_int}
@@ -652,21 +681,19 @@ experiment along the fast and slow axis of a \ac{pm} fibre.
 To produce the necessary counter-propagating beams, a \ac{qwp} and
 mirror retro-reflect and invert the polarisation of each beam. This
 results in the beam configuration shown in~\FigureRef{fig:double_int}.
-With a magnetic field aligned parallel to the light's wavevector, each
-beam drives $\sigma^\pm$ transitions. The $\Delta m_F = 2$ transitions
-corresponding to the $\sigma^+ - \sigma^-$ combinations are forbidden,
-leaving the two combinations which drive counter-propagating $\Delta m
-= 0$ transitions. These have effective wavevectors in opposite
+With a magnetic field defining a $z-$axis parallel to the light's
+wavevector, the fields are all driving $\sigma^\pm$ transitions. The
+co-propagating $\sigma^+ - \sigma^-$ combinations cannot drive the
+$\Delta m_F = 0$ \trans{1,0}{2,0} transition, leaving the two
+counter-propagating $\sigma^{+} - \sigma^{+}$ and $\sigma^{-} -
+\sigma^{-}$ combinations. These have effective wavevectors in opposite
 directions, which means that an atom resonant with both pairs is
 driven into a superposition of $\ket{1,\textbf{p}},
   \ket{2,\textbf{p}+\hbar \textbf{k}}$ and  $\ket{2,\textbf{p}-\hbar
   \textbf{k}}$. The $\pi/2-\pi-\pi/2$ pulse sequence results in a trajectory shown schematically
-  in~\FigureRef{fig:double_int_path}. Two sets of paths recombine to
-  form an interferometer which have oppositely signed phase shifts.
-  The fact that there is no longer a single momentum eigenstate
-  associated with $\ket{2}$ means that not every trajectory will
-  overlap. Consequently, this results in a loss of coherence between
-  the two states. 
+  in~\FigureRef{fig:double_int_path}. Some of the paths close to
+  form two interferometers with oppositely signed phase shifts, making
+  the interferometer insensitive to acceleration.
 \begin{figure}[htpb]
   \centering
   \resizebox{0.8\textwidth}{!}{\input{double_int.pdf_tex}}
@@ -690,6 +717,7 @@ transition spectrum in the experiment is presented
 in~\SectionRef{subsec:raman_spec} 
 \begin{figure}[htpb]
   \centering
+  \fontsize{18pt}{18pt}
   \resizebox{0.4\textwidth}{!}{\input{double_int_path.pdf_tex}}
   \caption[Interferometer paths with two oppositely directed Raman
   transitions.]{Interferometer paths with two oppositely directed Raman
